[tool.poetry]
name = "s3-projeto02"
version = "3.11.5"
description = ""
authors = ["Camila Santos <milass2000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandas = "^2.2.3"
boto3 = "^1.37.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
